fixup! BB 32308: Use direct browser sizing for letterboxing.
BB 44041: Use fixed positioning to make dialog overlays cover the whole content of letterboxed tabs.

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -120,7 +120,12 @@ browser:fullscreen {
 
 :root:not([inDOMFullscreen]) .letterboxing.letterboxing-ready .browserContainer:not(.responsive-mode)
   > .browserStack:not(.exclude-letterboxing) {
+
   place-content: var(--letterboxing-vertical-alignment) center;
+  & > .dialogStack {
+    position: fixed;
+  }
+
 }
 
 panelmultiview {
